# s2gos-client

./: 404.html  CHANGES.md  CONTRIBUTING.md  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
about/: index.html
cli/: index.html
docs/: about.md  cli.md  codegen.md  index.md  todo.md
docs/scripts/: gen-cli-md.py
examples/: demo.py  panel_demo.py
generators/: common.py  gen_client.py  gen_client_cli_md.py  gen_models.py  gen_server.py  openapi.py
notebooks/: client-api.ipynb  client-gui-show_jobs.ipynb  client-gui-show_submitter.ipynb  client-gui.ipynb  demo.ipynb  gui-demo.ipynb  test.ipynb
s2gos/: __init__.py  bboxselect.py  cli.py  config.py  defaults.py  gui.py  version.py
s2gos/client/: __init__.py  client.py  config.py  defaults.py  transport.py
s2gos/client/api/: __init__.py  api.py  client.py  service.py  transport.py
s2gos/client/cli/: cli.py  config.py  main.py
s2gos/client/gui/: __init__.py  client.py  create.py  jobs_form.py  jobstable.py  js2panel.py  processes_form.py  submitform.py  submitter.py
s2gos/common/: __init__.py  models.py  openapi.yaml
s2gos/gui/: create.py  js2panel.py
s2gos/server/: app.py  cli.py  codegen.py  exceptions.py  main.py  openapi.yaml  routes.py  service.py
s2gos/server/impl/: decorators.py  local_service.py  registry.py
s2gos/server/local/: __init__.py
s2gos/server/local/process/: __init__.py  registry.py  schema.py
s2gos/server/services/local/: job.py  local_service.py  process_registry.py  schema_factory.py  testing.py
s2gos_gen/: common.py  gen_client.py  gen_model.py  gen_server.py  openapi.py
search/: search_index.json
tests/client/: helpers.py  test_client.py  test_transport.py
tests/client/api/: test_api.py  test_client.py  test_service.py  test_transport.py
tests/client/common/: test_models.py
tests/common/: test_models.py
tests/server/impl/: test_decorator.py  test_registry.py
tests/server/local/process/: test_decorator.py  test_registry.py  test_schema.py
tests/server/services/local/: test_local_service.py  test_process_registry.py  test_schema_factory.py  test_testing.py
