#  Copyright (c) 2025 by ESA DTE-S2GOS team and contributors
#  Permissions are hereby granted under the terms of the Apache 2.0 License:
#  https://opensource.org/license/apache-2-0.

[build-system]
requires = ["setuptools >= 61.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s2gos"
description = "A Python client for the ESA DTE-S2GOS synthetic scene generator service"
dynamic = ["version", "readme"]
authors = [
  {name = "Norman Fomferra (Brockmann Consult GmbH)"},
  {name = "Tejas Morbagal Harish (Brockmann Consult GmbH)"}
]
keywords = [
  "synthetic scene generation",
  "esa",
  "eRadiate",
  "zarr"
]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
  "click",
  "pydantic",
  "pyyaml",
  "uri_template",
]

[project.scripts]
s2gos = "s2gos.client.cli.cli:cli"
s2gos-server = "s2gos.server.cli:cli"

[project.optional-dependencies]
gui = [
  "ipyleaflet",
  "ipywidgets",
  "ipywidgets_bokeh",
  "jupyter",
  "notebook",
  "panel",
  "tornado >=6.1",
]
server = [
  "fastapi",
  "typer",
  "uvicorn",
]
dev = [
  # Build tools
  "build",
  "hatch",
  "twine",
  # Code Style / QA
  "isort",
  "ruff",
  # Testing
  "pytest",
  "pytest-cov",
  # Code generation
  "datamodel-code-generator",
  # UI dev with Panel
  "watchfiles",
]
doc = [
  "mkdocs",
  "mkdocs-autorefs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python"
]

[tool.setuptools.dynamic]
version = {attr = "s2gos.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.package-data]
s2gos = [
    "py.typed",
    "common/openapi.yaml"
]

[tool.setuptools.packages.find]
exclude = [
  "tests",
  "docs"
]

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[tool.ruff]
# There is a problem with ruff when linting imports
exclude = ["**/*.ipynb"]

[project.urls]
Documentation = "https://s2gos-dev.github.io/s2gos-client"
Repository = "https://github.com/s2gos-dev/s2gos-client"
Changelog = "https://github.com/s2gos-dev/s2gos-client/blob/main/CHANGES.md"
Issues = "https://github.com/s2gos-dev/s2gos-client/issues"
